@@ -1,3 +1,7 @@
+2005-06-12  Chad Fowler  <chad@chadfowler.com>
+	* lib/rubygems.rb,lib/rubygems/installer.rb: Applied Mark Hubbart's
+	patch to support MacOS framework.
+
 2005-06-06  Chad Fowler  <chad@chadfowler.com>
 	* lib/rubygems/specification.rb: Fixed Erik hatcher's reported bug
 	of gem directories having "-" at the end of their names (e.g.
